# dez_jf

./: .gitignore  README.md  compose.yml  pyproject.toml
src/: inject_csv_into_pg.py
