[project]
name = "dez-jf"
version = "0.1.0"
description = "See README"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "marimo[sql]>=0.10.12",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pgcli>=4.1.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.37",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "beartype>=0.19.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.389",
    "ruff>=0.8.1",
]


[tool.pyright]
include = [
    "src"
  ]
exclude = [
  "tests",
  "examples",
  "docs"
]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
indent-width = 4
fix = true

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ANN",  # flake8-annotations
  "B",  # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4", # flake8-comprehensions
  "C",  # mccabe
  "D",  # flake8-docstrings
  "E", "F",  # flake8
  "FA",  # Verifies files use from __future__ import annotations if a type is used in the module that can be rewritten using PEP 563.
  "FURB", # Refurbishing and modernizing Python codebases
  "G",  # flake8-logging-format
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG", # Checks for issues using the standard library logging module.
  "N",  # pep8-naming
  "NPY", # Linting rules for numpy
  "PERF",# Linting rules for performance
  "PGH", # pygrep-hooks
  "Q",   # Linting rules for quites
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T10", # flake8-debugger
  "T20", # Check for Print statements in python files.
  "TID", # Helps you write tidier imports.
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W",   # pycodestyle warnings
  "YTT", # flake8-2020,
]

ignore = [
    "ANN101",
    "ANN204",
    "D105",
    "D107",
    "E731",
    "F403",
    "NPY002",
    "PGH003",
    "PGH004",
    "T201",
    "TRY003",
]

unfixable = [
  "ERA",  # Don't remove commented-out code
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
"__init__.py" = [
    "F401",
    "D104",
]
